--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "About Friederike Wild - coach for eye w
 url                      : "http://friederikewild.me"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
-teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : "teaser_default.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
