Add default settings for posts

--- a/_config.yml
+++ b/_config.yml
@@ -152,6 +152,19 @@ paginate_path: /page:num/
 timezone: "Europe/London"
 
 
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
+
 # Plugins
 gems:
   - jekyll-paginate
