--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : #&twitter fithappybeing? or something new?
 facebook:
-  username               :
+  username               : #todo something new?
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -84,7 +84,7 @@ author:
   stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : #fithappybeing? or something new?
+  twitter          : #*twitter
   vine             :
   weibo            :
   xing             :
@@ -145,13 +145,15 @@ kramdown:
   enable_coderay: false
 
 
-# Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-timezone: "Europe/London"
+
+# Collections
+collections:
+  diary:
+    output: true
+    permalink: /:collection/:path/
 
 
+# Defaults
 defaults:
   # _posts
   - scope:
@@ -159,11 +161,36 @@ defaults:
       type: posts
     values:
       layout: single
+      author_profile: true
       read_time: true
       comments: true
       share: true
       related: true
+# _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+# _diary
+  - scope:
+      path: ""
+      type: diary
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      share: true
+      comments: true
 
+
+
+# Outputting
+permalink: /:categories/:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
+timezone: "Europe/London"
 
 # Plugins
 gems:
@@ -172,6 +199,7 @@ gems:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-redirect-from
   - jekyll-auto-image
 
 # mimic GitHub Pages with --safe
@@ -181,6 +209,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-redirect-froms
   - jekyll-auto-image
 
 
