--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,10 +4,13 @@ main:
     url: /about/
 
   - title: "Posts"
-    url: /collection-archive/
+    url: /year-archive/
 
   - title: "Categories"
     url: /categories/
 
   - title: "Tags"
     url: /tags/
+
+  - title: "Collection"
+    url: /collection-archive/
