--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -21,7 +21,7 @@ en: &DEFAULT_EN
   comments_label        : "Leave a Comment"
   more_label            : "Learn More"
   related_label         : "You May Also Enjoy"
-  follow_label          : "Follow:"
+  follow_label          : ""
   feed_label            : "Feed"
   powered_by            : "Powered by"
   website_label         : "Website"
@@ -57,7 +57,7 @@ de: &DLOCALE_DE
   comments_label        : "Hinterlasse einen Kommentar"
   more_label            : "Lese weiter"
   related_label         : "Ähnliche Beiträge"
-  follow_label          : "Folge:"
+  follow_label          : ""
   feed_label            : "Feed"
   powered_by            : "Powered by"
   website_label         : "Website"
