--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,11 +6,13 @@ main:
   - title: "Posts"
     url: /year-archive/
 
-  - title: "Categories"
-    url: /categories/
+#  - title: "Categories"
+#    url: /categories/
 
   - title: "Tags"
     url: /tags/
 
-  - title: "Collection"
-    url: /collection-archive/
+#  - title: "Collection"
+#    url: /collection-archive/
+
+# excercises & events
