--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,32 @@
 # main links links
 main:
-  - title: "About" #Zur Person
+  - title: "Info"
+    url: /eyewellbeing/
+
+  - title: "About me" #Über mich
     url: /about/
 
-  - title: "Posts"
-    url: /year-archive/
+  - title: "Work with me"
+    url: /coaching/
+
+  - title: "Blog"
+    url: /blog/
+
+
+#  - title: "Tags"
+#    url: /tags/
+
+
+
+#  - title: "Archive"
+#    url: /year-archive/
 
 #  - title: "Categories"
 #    url: /categories/
 
-  - title: "Tags"
-    url: /tags/
+
+#  - title: "Connect"
+#    url: /contact/
 
 #  - title: "Collection"
 #    url: /collection-archive/
