Improve page description

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Eye Wellbeing"
 title_separator          : "-"
 name                     : &name "Friederike Wild"
 tagline                  : "Improve your Eye Wellbeing"
-description              : &description "About Friederike Wild - coach for eye wellbeing based in London UK and online. Helping you to relax your eyes and improve your vision."
+description              : &description "About Friederike Wild - Coach for eye wellbeing based in London UK and online. Helping you to relax your eyes and improve your vision."
 url                      : "http://eyewellbeing.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
