Writing about treats

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,8 @@ main:
   - title: "Info"
     url: /eyewellbeing/
 
+  - title: "Eye Treats"
+    url: /treats/
 
   - title: "Work with me"
     url: /coaching/
