--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ author:
   facebook         : &facebook "EyeWellbeing"
   foursquare       :
   github           :
-  google_plus      : # need name after +
+  google_plus      : "102086679280745809171"
   keybase          :
   instagram        : &instagram "eyewellbeing"
   lastfm           :
