Include pinterest in author profile

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   instagram        : &instagram "eyewellbeing"
   lastfm           :
   linkedin         : "friederike-wild-b933087"
-  pinterest        :
+  pinterest        : &pinterest "eyewellbeing"
   soundcloud       :
   stackoverflow    :
   steam            :
