Include mini etsy shop

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   - title: "Work with me"
     url: /coaching/
 
+  - title: "Shop" #Shop
+    url: /shop/
+
   - title: "About me" #Über mich
     url: /about/
 
