Include google site verification

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ comments:
     colorscheme          : # "light" (default), "dark"
 
 # SEO Related
-google_site_verification :
+google_site_verification : "vRuP0nse3n_Fu5Zb_5qT2BraiPYHT6LmCFHCkpcHxqg"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
