--- a/_data/splash.yml
+++ b/_data/splash.yml
@@ -1,14 +1,16 @@
 # splash links
 
-- title: Eye Wellbeing
+- title: "About Eye Wellbeing"
   url: /eyewellbeing/
   hometeaser: home_unsplash_eye.jpg
 
-- title: "Work With Me"
+
+- title: "Quiz: How Are Your Eyes?"
+  url: /quiz/
+  hometeaser: home_unsplash_quiz.jpg
+
+
+- title: "Services: Work With Me"
   url: /coaching/
   hometeaser: home_unsplash_work.jpg
 
-- title: "About Me"
-  url: /about/
-  hometeaser: bio-photo.jpg
-  
