* Update linkedIn url link

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   keybase          :
   instagram        : &instagram "eyewellbeing"
   lastfm           :
-  linkedin         : "friederike-wild-b933087"
+  linkedin         : "friederike-wild"
   pinterest        : &pinterest "eyewellbeing"
   soundcloud       :
   stackoverflow    :
